<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:scrollbarStyle="insideInset"
    android:background="@color/mediumGreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/privacy"
            android:id="@+id/textView12"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="How do we use your information?"
            android:id="@+id/textView13"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/info_use"
            android:id="@+id/textView14"
            android:layout_below="@+id/textView13"
            android:layout_alignParentStart="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="41dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="How do we protect personal information?"
            android:id="@+id/textView15"
            android:layout_below="@+id/textView14"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/privacy1"
            android:id="@+id/textView16"
            android:layout_below="@+id/textView15"
            android:layout_alignStart="@+id/textView14"
            android:layout_marginTop="36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Your consent"
            android:id="@+id/textView17"
            android:layout_below="@+id/textView16"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/privacy2"
            android:id="@+id/textView18"
            android:layout_below="@+id/textView17"
            android:layout_alignStart="@+id/textView16"
            android:layout_marginTop="39dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Right of access"
            android:id="@+id/textView19"
            android:layout_below="@+id/textView18"
            android:layout_alignParentStart="true"
            android:layout_marginTop="36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/privacy3"
            android:id="@+id/textView20"
            android:layout_below="@+id/textView19"
            android:layout_alignStart="@+id/textView18"
            android:layout_marginTop="38dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Changes"
            android:id="@+id/textView21"
            android:layout_below="@+id/textView20"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/privacy4"
            android:id="@+id/textView22"
            android:layout_below="@+id/textView21"
            android:layout_alignStart="@+id/textView20"
            android:layout_marginTop="30dp" />

    </RelativeLayout>
</ScrollView>